# sova-bitcoin-sync

./: Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
src/: bitcoin.rs  main.rs  sync_service.rs
