[package]
name = "sova-bitcoin-sync"
version = "0.0.13"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
hex = "0.4"
alloy = "1.0.22"
axum = "0.7"
tower = "0.4"
async-trait = "0.1"
bitcoincore-rpc = "0.18"
backoff = "0.4"
anyhow = "1.0"
